<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:background="@color/khaki"
    android:layout_height="wrap_content">
    

    
    <!-- Makes list scrolable -->
    <ScrollView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<LinearLayout 
        	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:orientation="vertical">                  			
    	    <TextView
        		android:id="@+id/detailsLabel"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="15dp"
        		android:text="@string/title" />	
    		<FrameLayout
	    		android:id="@+id/name" 
	    		android:layout_width="match_parent"
	    		android:layout_height="wrap_content"    
	    		android:layout_marginBottom="5dp" >
			    <EditText		    
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:paddingLeft="65dp"	    
				    android:ems="10"
				    android:inputType="textPersonName" />
		    	<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
		    		android:textStyle="bold"
		    		android:textColor="#2E2E2E"
			        android:paddingLeft="10dp"
			        android:text="@string/nameLabel" />	    
			</FrameLayout>
	
		    <FrameLayout
			    android:id="@+id/age" 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"    
			    android:layout_marginBottom="5dp" >
			    <EditText
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginBottom="15dp"
				    android:paddingLeft="50dp"		    
				    android:ems="10"
				    android:inputType="number" />
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
		    		android:textStyle="bold"
		    		android:textColor="#2E2E2E"
			        android:paddingLeft="10dp"
			        android:text="@string/ageLabel" />
		    </FrameLayout>
		    
			<RadioGroup
			    android:id="@+id/gender"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="5dp"
			    android:orientation="horizontal"
			    android:padding="5dp" >	
			    <RadioButton
				    android:id="@+id/female"
				    android:text="@string/female" />
				<RadioButton
				    android:id="@+id/male"
				    android:text="@string/male" />	
			</RadioGroup>
		
			<Spinner
				android:id="@+id/jobSpinner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp" />		
			<FrameLayout
			    android:id="@+id/email" 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"    
			    android:layout_marginBottom="5dp" >
				<EditText  
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:paddingLeft="65dp"
				    android:ems="10"
				    android:inputType="textEmailAddress" />
				<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
		    		android:textStyle="bold"
		    		android:textColor="#2E2E2E"
			        android:paddingLeft="10dp"
			        android:text="@string/emailLabel" />
			</FrameLayout>
			
			<FrameLayout
			    android:id="@+id/budget" 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"    
			    android:layout_marginBottom="25dp">
				<EditText		    
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:paddingLeft="65dp"
				    android:ems="10"
				    android:inputType="numberDecimal" />
				<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
		    		android:textStyle="bold"
		    		android:textColor="#2E2E2E"
			        android:paddingLeft="10dp"
			        android:text="@string/budgetLabel" />
			</FrameLayout>
		
			<Button
			    android:id="@+id/continueButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/buttonLabel" />	
			    	
		</LinearLayout>
	</ScrollView>	
</LinearLayout>